@@ -1,3 +1,9 @@
+2007-06-12  Briana Carstens <blcarste@physics.unc.edu>
+	- msd.m: removed plotting code.  removed loading video code.  generalized to include simulated data.
+	- video_msd.m: added.  loads video data and uses new msd to compute msd curve.
+	- plot_msd.m: added.  plots common mean-squared-displacment curves.  These plots used to be automatically generated by msd.  
+	- sim_msd.m: added.  simulates MSD curves for datasets containing variable numbers of trackers for a given duration and sampling rate.  Used to help validate msd and ve computations.
+
 2007-01-25  Jeremy Cribb <jcribb@email.unc.edu>
 	- plot_ve.m: added.  plots viscoelastic moduli given data from ve.m
 	- ve.m: removed plotting code and made new function.
